feature: included validation for demand creation